force-app/main/default/objects/blng__Payment__c/fields/blng__AllocatedtoInvoices__c.field-meta.xml
<CustomField>
    <fullName>blng__AllocatedtoInvoices__c</fullName>
    <label>Allocated to Invoices</label>
    <summarizedField>blng__PaymentAllocationInvoice__c.blng__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>blng__PaymentAllocationInvoice__c.blng__Type__c</field>
        <operation>equals</operation>
        <value>Allocation</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__PaymentAllocationInvoice__c.blng__Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>