force-app/main/default/objects/blng__Payment__c/fields/blng__Allocations__c.field-meta.xml
<CustomField>
    <fullName>blng__Allocations__c</fullName>
    <formula>blng__AllocatedtoInvoices__c +  blng__AllocatedtoInvoiceLines__c +  blng__AllocatedtoDebitNoteLines__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>