force-app/main/default/objects/blng__Payment__c/fields/blng__AllocationStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__AllocationStatus__c</fullName>
    <label>Allocation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__AllocationStatus</valueSetName>
    </valueSet>
</CustomField>