force-app/main/default/objects/blng__Payment__c/fields/blng__BankAccountName__c.field-meta.xml
<CustomField>
    <fullName>blng__BankAccountName__c</fullName>
    <label>Bank Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>