force-app/main/default/objects/blng__Payment__c/fields/blng__CardCodeResponse__c.field-meta.xml
<CustomField>
    <fullName>blng__CardCodeResponse__c</fullName>
    <label>Card Code Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>