force-app/main/default/objects/blng__Payment__c/fields/blng__CardExpirationMonth__c.field-meta.xml
<CustomField>
    <fullName>blng__CardExpirationMonth__c</fullName>
    <label>Card Expiration Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__CardExpirationMonth</valueSetName>
    </valueSet>
</CustomField>