force-app/main/default/objects/blng__Payment__c/fields/blng__CardType__c.field-meta.xml
<CustomField>
    <fullName>blng__CardType__c</fullName>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__CardType</valueSetName>
    </valueSet>
</CustomField>