force-app/main/default/objects/blng__Payment__c/fields/blng__CheckNumber__c.field-meta.xml
<CustomField>
    <fullName>blng__CheckNumber__c</fullName>
    <label>Check Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>