force-app/main/default/objects/blng__Payment__c/fields/blng__ImpactAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__ImpactAmount__c</fullName>
    <formula>-  blng__Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impact Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>