force-app/main/default/objects/blng__Payment__c/fields/blng__PaidBy__c.field-meta.xml
<CustomField>
    <fullName>blng__PaidBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paid By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>