force-app/main/default/objects/blng__Payment__c/fields/blng__PaymentAuthorization__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentAuthorization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment Authorization used for payment capture</description>
    <inlineHelpText>Payment Authorization used for payment capture</inlineHelpText>
    <label>Payment Authorization</label>
    <referenceTo>blng__PaymentAuthorization__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>