force-app/main/default/objects/blng__Payment__c/fields/blng__PaymentDescription__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentDescription__c</fullName>
    <label>Payment Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>