force-app/main/default/objects/blng__Payment__c/fields/blng__PaymentGatewayToken__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentGatewayToken__c</fullName>
    <label>Token ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>