force-app/main/default/objects/blng__Payment__c/fields/blng__PaymentMode__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentMode__c</fullName>
    <description>Select Electronic if payments are made through Salesforce Billing; select External to manually enter a payment processed elsewhere.</description>
    <inlineHelpText>Select Electronic if payments are made through Salesforce Billing; select External to manually enter a payment processed elsewhere.</inlineHelpText>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__PaymentMode</valueSetName>
    </valueSet>
</CustomField>