force-app/main/default/objects/blng__Payment__c/fields/blng__RefundsUnallocations__c.field-meta.xml
<CustomField>
    <fullName>blng__RefundsUnallocations__c</fullName>
    <label>Refunds (Unallocations)</label>
    <summarizedField>blng__RefundLinePayment__c.blng__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>blng__RefundLinePayment__c.blng__Type__c</field>
        <operation>equals</operation>
        <value>Unallocation</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>blng__RefundLinePayment__c.blng__Status__c</field>
        <operation>equals</operation>
        <value>Posted</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__RefundLinePayment__c.blng__Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>