force-app/main/default/objects/blng__Payment__c/fields/blng__UnallocatedfromDebitNoteLines__c.field-meta.xml
<CustomField>
    <fullName>blng__UnallocatedfromDebitNoteLines__c</fullName>
    <label>Unallocated from Debit Note Lines</label>
    <summarizedField>blng__PaymentAllocationDebitNoteLine__c.blng__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>blng__PaymentAllocationDebitNoteLine__c.blng__Type__c</field>
        <operation>equals</operation>
        <value>Unallocation</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__PaymentAllocationDebitNoteLine__c.blng__Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>