force-app/main/default/objects/blng__Payment__c/fields/blng__Unallocations__c.field-meta.xml
<CustomField>
    <fullName>blng__Unallocations__c</fullName>
    <formula>blng__UnallocatedfromDebitNoteLines__c + blng__UnallocatedfromInvoiceLines__c + blng__UnallocatedfromInvoices__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unallocations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>