force-app/main/default/objects/blng__Payment__c/listViews/blng__All.listView-meta.xml
<ListView>
    <fullName>blng__All</fullName>
    <columns>NAME</columns>
    <columns>blng__Account__c</columns>
    <columns>blng__PaymentDate__c</columns>
    <columns>blng__PaymentType__c</columns>
    <columns>blng__Amount__c</columns>
    <columns>blng__Allocations__c</columns>
    <columns>blng__Unallocations__c</columns>
    <columns>blng__Balance__c</columns>
    <columns>blng__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>